tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__WellThisLooksShi-AAAAAAAAAAAAAAAAAAAKHA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2588,
  "prerequisites": [
    13520174359713356034
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Eternal singularity, requires nearly every resource in GTNH to construct. A stargate will require hundreds of thousands of these in total.\n\n§3It can be mass produced after spacetime. 4 eternal singularity is enough for now to move on.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Well This Looks... Shiny?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13520174359713356034
  ],
  "rewards": [],
  "tasks": []
}
